# mental-health-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.planning/: INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: actor-flows-8f3c1a2b.json  actor-flows-a3f2c1e8.json  actor-flows.json  competitive-edge-a3f7c821.json  competitive-edge-b3c7a1f2.json  competitive-edge-cf8d2b1a.json  constitution-00000000.json  constitution-a3f7c219.json  constitution.json  gaps-9f3a7c1e.json  gaps-a3f7c219.json  gaps-checklist.json  psychiatry-sessions-india-00000000.json  psychiatry-sessions-india-e3f7a912.json  psychiatry-sessions-india.json  spec.json  (+5 more)
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/tests/: conftest.py
apps/api/tests/contract/: test_health.py
apps/web/: eslint.config.js  index.html  package-lock.json  package.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
specs/001-patient-psychiatrist-match/: actor-flows.md  competitive-edge.md  data-model.md  plan.md  quickstart.md  spec.md  tasks.md
superpower/001-patient-psychiatrist-match/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
(+25 files in other folders)
